--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ header video {
     padding: 48px 32px 32px 32px;
     margin-top: 0.7em;
     color: white;
+    width: 100%;
 }
 
 h1 {
@@ -174,11 +175,37 @@ h1 {
     background-color: #eeeeee;
 }
 
+.arrow-btns {
+    position: absolute;
+    top: 200%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 24px;
+}
+.arrow-btns button {
+    background-color: #ffffffd5;
+    height: 40px;
+    width: 40px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px;
+    color: rgb(57, 60, 65);
+    border: none;
+    cursor: pointer;
+    margin: 0px 65rem;
+}
+.arrow-img {
+    height: 25px;
+}
+
 .multi-dots {
     display: flex;
     position: absolute;
-    top: 680px;
-    left: 48%;
+    top: calc(56px + 73vh - 40px);
+    left: 50%;
+}
+.multi-dots button {
+    all: unset;
+    cursor: pointer;
 }
 .circle {
     background-color: white;
@@ -189,6 +216,9 @@ h1 {
 }
 .inactive {
     background-color: #ffffff80;
+}
+.inactive:hover{
+    background-color: #ffffffa5;
 }
 
 /* ----------------- */
@@ -280,11 +310,16 @@ footer ul {
     list-style-type: none;
     font-size: 12px;
     font-weight: 400;
-    color: rgb(57, 60, 65);
     letter-spacing: 0.7px;
 }
 
 footer ul li {
     padding: 8px 0px;
     margin-right: 14px;
+}
+
+footer ul li a {
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(57, 60, 65);
 }
