--- a/style.css
+++ b/style.css
@@ -207,8 +207,25 @@ h1 {
     all: unset;
     cursor: pointer;
 }
+.multi-dots-dark {
+    display: flex;
+    position: absolute;
+    top: calc(56px + 73vh + 664px);
+    left: 49%;
+}
+.multi-dots-dark button {
+    all: unset;
+    cursor: pointer;
+}
 .circle {
     background-color: white;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 0px 4px;
+}
+.dark-circ {
+    background-color: #161a20;
     width: 12px;
     height: 12px;
     border-radius: 50%;
@@ -219,6 +236,12 @@ h1 {
 }
 .inactive:hover{
     background-color: #ffffffa5;
+}
+.inactive-dark {
+    background-color: #8b8c8f;
+}
+.inactive-dark:hover {
+    background-color: #6a6b6d;
 }
 
 /* ----------------- */
@@ -293,6 +316,25 @@ h5 {
     background: url("./resources/model-s-card.avif");
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+.right-arrow-cards {
+    display: flex;
+    position: absolute;
+    top: calc(56px + 73vh + 350px);
+    right: -41%;
+    justify-content: space-around;
+}
+.right-arrow-cards button {
+    background-color: #ffffffd5;
+    height: 40px;
+    width: 40px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px;
+    color: rgb(57, 60, 65);
+    border: none;
+    cursor: pointer;
+    margin: 0px 72rem;
 }
 
 /* ------ */
