--- a/style.css
+++ b/style.css
@@ -102,14 +102,14 @@ nav{
 /* ------------ */
 
 header {
-    height: 73vh;
+    height: 80vh;
     width: 100vw;
+    position: relative;
 }
 
 header video {
     position: absolute;
-    top: 56px;
-    height: 73vh;
+    height: 80vh;
     width: 100vw;
     object-fit: cover;
     z-index: -1;
@@ -118,15 +118,18 @@ header video {
 }
 
 .content-overlay {
+    position: relative;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     z-index: 1;
-    padding: 48px 32px 32px 32px;
-    margin-top: 0.7em;
+    /* padding: 48px 32px 32px 32px;
+    margin-top: 0.7em; */
     color: white;
     width: 100%;
+    height: 73vh;
 }
 
 h1 {
@@ -176,11 +179,11 @@ h1 {
 }
 
 .arrow-btns {
-    position: absolute;
-    top: 200%;
+    position: relative;
     display: flex;
+    width: 100%;
+    align-items: center;
     justify-content: space-between;
-    padding: 0 24px;
 }
 .arrow-btns button {
     background-color: #ffffffd5;
@@ -191,27 +194,64 @@ h1 {
     color: rgb(57, 60, 65);
     border: none;
     cursor: pointer;
-    margin: 0px 65rem;
+}
+.arrow-left-btn{
+    position: absolute;
+    left: 50px;
+    top: 13vh;
+}
+.arrow-right-btn{
+    position: absolute;
+    right: 50px;
+    top: 13vh;
 }
 .arrow-img {
     height: 25px;
 }
 
+.pause {
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+}
+.pause button {
+    padding: 4px;
+    border: 2px;
+    border-radius: 4px;
+    width: 40px;
+    height: 40px;
+    background-color: #596163c0;
+    cursor: pointer;
+    transition: background-color 0.25s ease;
+}
+.pause button:hover {
+    background-color: #424849c0;
+    transition: background-color 0.7s ease;
+}
+.pause img {
+    width: 24px;
+    height: 24px;
+    color: white;
+}
+
 .multi-dots {
     display: flex;
     position: absolute;
-    top: calc(56px + 73vh - 40px);
-    left: 50%;
+    bottom: 15px;
+    /* top: calc(56px + 73vh - 40px);
+    left: 50%; */
 }
 .multi-dots button {
     all: unset;
     cursor: pointer;
 }
 .multi-dots-dark {
-    display: flex;
     position: absolute;
-    top: calc(56px + 73vh + 664px);
-    left: 49%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
 }
 .multi-dots-dark button {
     all: unset;
@@ -318,14 +358,14 @@ h5 {
     background-size: contain;
 }
 
-.right-arrow-cards {
+.cards-arrow-btn {
+    position: relative;
     display: flex;
-    position: absolute;
-    top: calc(56px + 73vh + 350px);
-    right: -41%;
-    justify-content: space-around;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
 }
-.right-arrow-cards button {
+.cards-arrow-btn button {
     background-color: #ffffffd5;
     height: 40px;
     width: 40px;
@@ -334,7 +374,16 @@ h5 {
     color: rgb(57, 60, 65);
     border: none;
     cursor: pointer;
-    margin: 0px 72rem;
+}
+.cards-arrow-btn-left {
+    position: absolute;
+    left: 60px;
+    bottom: 280px;
+}
+.cards-arrow-btn-right {
+    position: absolute;
+    right: 50px;
+    bottom: 280px;
 }
 
 /* ------ */
